--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -52,7 +52,7 @@
       "offers": {
         "@type": "Offer",
         "url": "https://cafecomvendas.com/",
-        "price": "XXX",
+        "price": "180",
         "priceCurrency": "EUR",
         "availability": "https://schema.org/LimitedAvailability",
         "description": "Vagas limitadas para garantir uma experiência de transformação profunda e individual"
@@ -65,7 +65,7 @@
     }
     </script>
     
-    <!-- Tailwind CSS -->
+    <!-- Main CSS (includes Tailwind + tokens) -->
     <link rel="stylesheet" href="/tailwind.css">
     
     <!-- Fonts are served locally via @font-face in /assets/css/main.css -->
