--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -142,7 +142,7 @@
   </div>
   
   {# Bottom Copyright Section - Using Data Layer #}
-  <div class="relative border-t border-white/10 py-12" data-reveal>
+  <div class="relative border-t border-white/10 py-12">
     <div class="container mx-auto px-8 md:px-12 max-w-7xl">
       <div class="flex flex-col md:flex-row justify-between items-center space-y-6 md:space-y-0 md:space-x-8">
         
